--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.githubhub"
@@ -61,15 +61,17 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
+    // Android Jetpack Paging 3.0
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha15'
+
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
 
     // GSON
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
-    // coroutine
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
+    // rxJava
+
 
     //coil
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
@@ -83,7 +85,7 @@ dependencies {
     // test
     testImplementation 'app.cash.turbine:turbine:0.8.0'
     testImplementation "io.mockk:mockk:1.12.3"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
+
     // Test rules and transitive dependencies:
     androidTestImplementation("androidx.compose.ui:ui-test-junit4:$compose_version")
 // Needed for createComposeRule, but not createAndroidComposeRule:
