--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.githubhub">
+    package="com.githublagos">
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".GithubApp"
+        android:name="com.githublagos.GithubLagos"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GithubHub">
         <activity
-            android:name=".MainActivity"
+            android:name="com.githublagos.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.GithubHub">
